[tool.poetry]
name = "magstats-step"
version = "0.1.0"
description = ""
authors = ["ASHuenchuleo <arsepulh@gmail.com>"]
readme = "README.md"
packages = [{include = "magstats_step"}]

[tool.poetry.dependencies]
python = "~3.9.0"
apf-base = "2.4.2"
methodtools = "^0.4.7"
numpy = "~1.24.2"
pandas = "~1.5.3"
fastavro = { version = "~1.6.1", optional = true }
prometheus-client = { version = "~0.16.0", optional = true }
confluent-kafka = { version = "~2.0.2", optional = true }

[tool.poetry.extras]
apf = ["fastavro", "prometheus-client", "confluent-kafka", "apf_base"]

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pytest-docker = "^1.0.1"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
